--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,14 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 
--   repo: git://github.com/pycqa/pylint
-    rev: pylint-2.6.0
+-   repo: local
     hooks:
     -   id: pylint
-        args: ["--fail-under=8"]
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        args: ["--fail-under=8", "--rcfile=pyproject.toml"]
 
 -   repo: git://github.com/Yelp/detect-secrets
     rev: v1.1.0
